1st Commit: User Entity
1. Created entity and repository.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@ spring.datasource.url=jdbc:mariadb://127.0.01:3306/spring_dev
 spring.datasource.classname=org.mariadb.jdbc.MySQLDataSource
 spring.datasource.username=root
 spring.datasource.password=1234
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
+spring.jpa.generate-ddl=false
+spring.jpa.hibernate.ddl-auto=update
